[package]
name = "kas-image"
version = "0.16.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "KAS GUI / widgets"
readme = "README.md"
documentation = "https://docs.rs/kas-widgets/"
keywords = ["gui"]
categories = ["gui"]
repository.workspace = true
rust-version.workspace = true
exclude = ["/screenshots"]

[package.metadata.docs.rs]
features = ["docs_rs", "svg"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
# Non-local features required for doc builds.
# Note: docs.rs does not support direct usage of transitive features.
docs_rs = ["kas/wayland"]

# Support SVG images
svg = ["dep:resvg", "dep:usvg"]

# Support Canvas widget
canvas = []

# Support raster images (this does not imply support for any formats)
image = ["dep:image"]
# Enable all default formats of the image crate
image-default-formats = ["dep:image", "image/default-formats"]
# Selected image formats
avif = ["dep:image", "image/avif"]
jpeg = ["dep:image", "image/jpeg"]
png = ["dep:image", "image/png"]
webp = ["dep:image", "image/webp"]

[dependencies]
tiny-skia = { version = "0.11.0" }
resvg = { version = "0.45.0", optional = true }
usvg = { version = "0.45.0", optional = true }
once_cell = "1.17.0"
thiserror = "2.0.3"
image = { version = "0.25.1", default-features = false, optional = true }

[dependencies.kas]
# We must rename this package since macros expect kas to be in scope:
version = "0.16.0"
package = "kas-core"
path = "../kas-core"
features = ["spawn"]
