[package]
name = "kas-macros"
version = "0.11.0"
authors = ["Diggory Hardy <git@dhardy.name>"]
edition = "2021"
license = "Apache-2.0"
description = "KAS GUI / macros"
keywords = ["gui", "proc-macro"]
categories = ["gui"]
repository = "https://github.com/kas-gui/kas"
readme = "README.md"
documentation = "https://docs.rs/kas-macros/"

[lib]
proc-macro = true

[features]
# Inject logging into macro-generated code.
# Requires that all crates using these macros depend on the log crate.
log = []

[dependencies]
quote = "1.0"
proc-macro2 = { version = "1.0" }
proc-macro-error = "1.0"
bitflags = "1.3.1"

[dependencies.impl-tools-lib]
version = "0.5.2" # version used in doc links

[dependencies.syn]
version = "1.0.14"
# We need 'extra-traits' for equality testing
# We need 'full' for parsing macros within macro arguments
features = ["extra-traits", "full", "visit", "visit-mut"]

[build-dependencies]
version_check = "0.9"
