[package]
name = "kas-resvg"
version = "0.14.0-alpha"
authors = ["Diggory Hardy <git@dhardy.name>"]
edition = "2021"
license = "Apache-2.0"
description = "KAS GUI / widgets"
readme = "README.md"
documentation = "https://docs.rs/kas-widgets/"
keywords = ["gui"]
categories = ["gui"]
repository = "https://github.com/kas-gui/kas"
exclude = ["/screenshots"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --no-deps --open

[features]
# Support SVG images
svg = ["dep:resvg", "dep:usvg"]

[dependencies]
tiny-skia = { version = "0.10.0" }
resvg = { version = "0.35.0", optional = true }
usvg = { version = "0.35.0", optional = true }
once_cell = "1.17.0"
thiserror = "1.0.23"

[dependencies.kas]
# We must rename this package since macros expect kas to be in scope:
version = "0.14.0-alpha"
package = "kas-core"
path = "../kas-core"
features = ["spawn"]
