[package]
name = "kas-resvg"
version = "0.15.0"
authors = ["Diggory Hardy <git@dhardy.name>"]
edition = "2021"
license = "Apache-2.0"
description = "KAS GUI / widgets"
readme = "README.md"
documentation = "https://docs.rs/kas-widgets/"
keywords = ["gui"]
categories = ["gui"]
repository = "https://github.com/kas-gui/kas"
exclude = ["/screenshots"]

[package.metadata.docs.rs]
features = ["docs_rs", "svg"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
# Non-local features required for doc builds.
# Note: docs.rs does not support direct usage of transitive features.
docs_rs = ["kas/winit", "kas/wayland"]

# Support SVG images
svg = ["dep:resvg", "dep:usvg"]

[dependencies]
tiny-skia = { version = "0.11.0" }
resvg = { version = "0.44.0", optional = true }
usvg = { version = "0.44.0", optional = true }
once_cell = "1.17.0"
thiserror = "2.0.3"

[dependencies.kas]
# We must rename this package since macros expect kas to be in scope:
version = "0.15.0"
package = "kas-core"
path = "../kas-core"
features = ["spawn"]
