[package]
name = "kas-theme"
version = "0.11.0"
authors = ["Diggory Hardy <git@dhardy.name>"]
edition = "2021"
license = "Apache-2.0"
description = "KAS GUI / theme support"
keywords = ["gui"]
categories = ["gui"]
repository = "https://github.com/kas-gui/kas"
readme = "README.md"
documentation = "https://docs.rs/kas-theme/"

[package.metadata.docs.rs]
features = ["nightly", "config"]
rustdoc-args = ["--cfg", "doc_cfg"]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --features=internal_doc,nightly,config --open

[features]
default = []
nightly = []

# Enables documentation of APIs for shells and internal usage.
# This API is not intended for use by end-user applications and
# thus is omitted from built documentation by default.
# This flag does not change the API, only built documentation.
internal_doc = ["kas/internal_doc"]

# Enable config read/write
config = ["dep:serde", "kas/config"]

# Automatically detect usage of dark theme
dark-light = ["dep:dark-light"]

[dependencies]
# Rename package purely for convenience:
kas = { version = "0.11.0", package = "kas-core", path = "../kas-core" }
linear-map = "1.2.0"
log = "0.4"
serde = { version = "1.0.123", features = ["derive"], optional = true }
bitflags = "1.3.1"
dark-light = { version = "0.2.2", optional = true }
