[package]
name = "kas-view"
version = "0.14.0-alpha"
authors = ["Diggory Hardy <git@dhardy.name>"]
edition = "2021"
license = "Apache-2.0"
description = "KAS GUI / view widgets"
readme = "README.md"
documentation = "https://docs.rs/kas-view/"
keywords = ["gui"]
categories = ["gui"]
repository = "https://github.com/kas-gui/kas"
exclude = ["/screenshots"]

[package.metadata.docs.rs]
features = []
rustdoc-args = ["--cfg", "doc_cfg"]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --no-deps --open

[dependencies]
kas-widgets = { version = "0.14.0-alpha", path = "../kas-widgets" }
log = "0.4"
linear-map = "1.2.0"

# We must rename this package since macros expect kas to be in scope:
kas = { version = "0.14.0-alpha", package = "kas-core", path = "../kas-core" }
