[package]
name = "kas-view"
version = "0.15.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "KAS GUI / view widgets"
readme = "README.md"
documentation = "https://docs.rs/kas-view/"
keywords = ["gui"]
categories = ["gui"]
repository.workspace = true
rust-version.workspace = true
exclude = ["/screenshots"]

[package.metadata.docs.rs]
features = ["kas/wayland"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
kas-widgets = { version = "0.15.0", path = "../kas-widgets" }
log = "0.4"
linear-map = "1.2.0"

# We must rename this package since macros expect kas to be in scope:
kas = { version = "0.15.0", package = "kas-core", path = "../kas-core" }

[lints.clippy]
collapsible_else_if = "allow"
needless_lifetimes = "allow"
unit_arg = "allow"
