[package]
name = "kas-wgpu"
version = "0.14.0-alpha"
authors = ["Diggory Hardy <git@dhardy.name>"]
edition = "2021"
license = "Apache-2.0"
description = "KAS GUI / wgpu front-end"
keywords = ["gui", "wgpu"]
categories = ["gui"]
repository = "https://github.com/kas-gui/kas"
readme = "README.md"
documentation = "https://docs.rs/kas-wgpu/"

[features]
# WARNING: if "raster" is disabled, an alternative like "kas-text/fontdue" is required!
default = ["shaping", "raster"]

# Enables documentation of APIs for shells and internal usage.
# This API is not intended for use by end-user applications and
# thus is omitted from built documentation by default.
# This flag does not change the API, only built documentation.
internal_doc = []

shaping = ["kas-text/shaping"]
harfbuzz = ["kas-text/harfbuzz"]
raster = ["kas-text/raster"]

[dependencies]
bytemuck = "1.7.0"
futures-lite = "2.0"
log = "0.4"
thiserror = "1.0.23"
guillotiere = "0.6.0"
rustc-hash = "1.0"

# Force patch versions of naga and wgpu-core (otherwise not needed as direct dependencies)
naga = "0.14.1"
wgpu-core = "0.18.1"

[dependencies.kas]
# Rename package purely for convenience:
version = "0.14.0-alpha"
package = "kas-core"
path = "../kas-core"

[dependencies.kas-text]
version = "0.6.0"

[dependencies.wgpu]
version = "0.18.0"
features = ["spirv"]

[build-dependencies]
glob = "0.3"
