[package]
name = "kas-wgpu"
version = "0.15.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "KAS GUI / wgpu front-end"
keywords = ["gui", "wgpu"]
categories = ["gui"]
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/kas-wgpu/"

[package.metadata.docs.rs]
features = ["kas/wayland"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []

# Enables documentation of APIs for graphics library and platform backends.
# This API is not intended for use by end-user applications and
# thus is omitted from built documentation by default.
# This flag does not change the API, only built documentation.
internal_doc = []

# WGPU backends
vulkan = ["wgpu/vulkan"]
gles = ["wgpu/gles"]
dx12 = ["wgpu/dx12"]
metal = ["wgpu/metal"]

shaping = ["kas-text/shaping"]

# Enable ab_glyph backend (redundant)
ab_glyph = ["kas-text/ab_glyph", "dep:ab_glyph"]

[dependencies]
bytemuck = "1.7.0"
futures-lite = "2.0"
log = "0.4"
thiserror = "2.0.3"
guillotiere = "0.6.0"
rustc-hash = "2.0"
ab_glyph = { version = "0.2.10", optional = true }

[dependencies.kas]
# Rename package purely for convenience:
version = "0.15.0"
package = "kas-core"
path = "../kas-core"

[dependencies.kas-text]
version = "0.8.0"

[dependencies.swash]
version = "0.2.4"
features = ["scale"]

[dependencies.wgpu]
version = "25.0.0"
default-features = false
features = ["spirv"]

[build-dependencies]
glob = "0.3"

[lints.clippy]
needless_lifetimes = "allow"
unit_arg = "allow"
