[package]
name = "kas-widgets"
version = "0.14.1"
authors = ["Diggory Hardy <git@dhardy.name>"]
edition = "2021"
license = "Apache-2.0"
description = "KAS GUI / widgets"
readme = "README.md"
documentation = "https://docs.rs/kas-widgets/"
keywords = ["gui"]
categories = ["gui"]
repository = "https://github.com/kas-gui/kas"
exclude = ["/screenshots"]

[package.metadata.docs.rs]
features = ["min_spec"]
rustdoc-args = ["--cfg", "doc_cfg"]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --no-deps --open

[features]
# Use min_specialization (enables access key underlining for AccessLabel)
min_spec = []

[dependencies]
log = "0.4"
smallvec = "1.6.1"
unicode-segmentation = "1.7"
thiserror = "1.0.23"
image = { version = "0.24.1", optional = true }
kas-macros = { version = "0.14.1", path = "../kas-macros" }
linear-map = "1.2.0"

# We must rename this package since macros expect kas to be in scope:
kas = { version = "0.14.1", package = "kas-core", path = "../kas-core" }
