[package]
name = "kas-file-explorer"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "KAS GUI / file system explorer"
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies.kas]
version = "0.16.0"
path = "../.."
