[package]
name = "kas-mandlebrot"
version = "0.12.0"
authors = ["Diggory Hardy <git@dhardy.name>"]
edition = "2021"
license = "Apache-2.0"
description = "KAS GUI / Mandlebrot example"
publish = false

[dependencies]
kas = { version = "0.12.0", features = ["wgpu"], path = "../.." }
chrono = "0.4"
env_logger = "0.10"
log = "0.4"
bytemuck = "1.7.0"

[features]
# Use 64-bit shaders
# This allows much greater zoom levels, but has compatibility issues.
shader64 = []

[[bin]]
name = "mandlebrot"
path = "mandlebrot.rs"

[build-dependencies]
glob = "0.3"
