[package]
name = "kas-mandlebrot"
version = "0.14.1"
authors = ["Diggory Hardy <git@dhardy.name>"]
edition = "2021"
license = "Apache-2.0"
description = "KAS GUI / Mandlebrot example"
publish = false

[dependencies]
kas = { version = "0.14.1", features = ["wgpu"], path = "../.." }
kas-wgpu = { version = "0.14.1", path = "../../crates/kas-wgpu" }
chrono = "0.4"
env_logger = "0.11"
log = "0.4"
bytemuck = "1.7.0"

[features]
# Use 64-bit shaders
# This allows much greater zoom levels, but has compatibility issues.
shader64 = []

[[bin]]
name = "mandlebrot"
path = "mandlebrot.rs"

[build-dependencies]
glob = "0.3"
