[package]
name = "kas-mandlebrot"
version = "0.15.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "KAS GUI / Mandlebrot example"
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
kas = { version = "0.15.0", features = ["wgpu"], path = "../.." }
kas-wgpu = { version = "0.15.0", path = "../../crates/kas-wgpu" }
chrono = "0.4"
env_logger = "0.11"
log = "0.4"
bytemuck = "1.7.0"

[features]
# Use 64-bit shaders
# This allows much greater zoom levels, but has compatibility issues.
shader64 = []

[[bin]]
name = "mandlebrot"
path = "mandlebrot.rs"

[build-dependencies]
glob = "0.3"
