[package]
name = "kas-text-editor"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "KAS GUI / simple text editor"
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
kas = { version = "0.16.0", features = ["wgpu"], path = "../.." }
env_logger = "0.11"
log = "0.4"

[[bin]]
name = "text-editor"
path = "text-editor.rs"
